<resources>
    <string name="app_name">infinityApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="staff_id">staff ID</string>
    <string name="member_type">member type</string>
    <string name="mobile_no">Mobile No</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="remove_staff">Remove Users</string>
    <string name="edit_staff_details">Edit Staff details</string>
    <string name="block_users">Block users</string>
    <string name="search_users">search users</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="add_staff">Add staff</string>
    <string name="no_of_attempts_remaining">No of attempts Remaining:</string>
    <string name="forget_password">Forget password ?</string>
    <string name="Dont">Do you have an account? SIGN IN</string>
    <string name="EditStaff">Edit Staff</string>
    <string name="AddStaff">Add Staff</string>
    <string name="NoData">No Data found</string>
    <string name="BlockUser">Block Users</string>
    <string name="FinDUSer">Find Users</string>
    <string name="Find_user">Enter name of the user</string>
    <string name="janitha_remove_staff_members">Remove Staff Members</string>
    <string name="janith_next_btn">next</string>
    <string name="janith_back_btn">back</string>
    <string name="janith_staff_member_details">Staff Member Details</string>
    <string name="janith_x">x</string>
    <string name="janith_code">CODE</string>
    <string name="janith_type">Type</string>


    <!--Malidi's resources files -->

    <string name="m_lastname">Enter Your Last Name</string>
    <string name="m_register">REGISTER</string>
    <string name="m_firstname">Enter Your First Name</string>
    <string name="m_username">Enter Your User Name</string>
    <string name="m_email">Enter Your E-mail</string>
    <string name="m_mobile">Enter Your Mobile(07********)</string>
    <string name="m_gender">Gender</string>
    <string name="m_male">Male</string>
    <string name="m_female">Female</string>
    <string name="m_password">Enter Your Password</string>
    <string name="m_confirmpassword">Confirm Your Password</string>
    <string name="m_registernow">REGISTER NOW</string>
    <string name="m_myaccount">MY ACCOUNT</string>
    <string name="m_editbtn">EDIT PROFILE</string>
    <string name="m_purchasehistory">My Purchase History</string>
    <string name="m_purchasenot">Purchase not available</string>
    <string name="m_signout">SIGN OUT</string>
    <string name="m_editprofile">EDIT PROFILE</string>
    <string name="m_displayname">Malidi</string>
    <string name="m_displaylname">Wageesha</string>
    <string name="m_displayuname">maali</string>
    <string name="m_changebtn1">CHANGE</string>
    <string name="m_displaymail">malidiwageesha8@gmail.com</string>
    <string name="m_displaymobile">0773456930</string>
    <string name="m_displaygender">Gender</string>
    <string name="m_displaymale">Male</string>
    <string name="m_displayfemale">Female</string>
    <string name="m_epassword">12345</string>
    <string name="m_changebtn2">CHANGE</string>
    <string name="m_chnagebtn3">CHANGE</string>
    <string name="m_econpassword">12345</string>
    <string name="m_update">UPDATE</string>
    <string name="m_delete">DELETE</string>
    <string name="m_forgotpass">FORGOT YOUR PASSWORD?</string>
    <string name="m_sendbtn">SEND</string>
    <string name="m_newpassword">NEW PASSWORD</string>
    <string name="m_femail2" />
    <string name="m_fnewpassword">Enter New Password</string>
    <string name="m_fconfirmpassword">Confirm New Password</string>
    <string name="m_resetpassword">RESET PASSWORD</string>
    <string name="m_enter_email">enter your email</string>


    //tharik

    <string name="tharikrizan">tharikrizan</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="tharikrizan_yahoo_com">tharikrizan@yahoo.com</string>
    <string name="contact">Contact</string>
    <string name="_0767936896">0767936896</string>

    <string name="_1_1212fddt">1@1212fdDT</string>
    <string name="insert_movie_form">Insert Movie Form</string>
    <string name="horror">Horror</string>
    <string name="movie_type">Movie Type</string>
    <string name="_2_hrs_15_min">2 hrs 15 min</string>
    <string name="commedy">Commedy</string>
    <string name="button">Button</string>
    <string name="infinity_studos">Infinity Studos</string>
    <string name="runningtime">RunningTime</string>
    <string name="production">Production</string>
    <string name="avenger_end_game">Avenger End Game</string>
    <string name="action">Action</string>
    <string name="movie_name">Movie Name</string>
    <string name="mov123">mov123</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="movie_id">Movie Id</string>
    <string name="sinhala">Sinhala</string>
    <string name="tamil">Tamil</string>
    <string name="delete_form">Delete Form</string>
    <string name="save_edit">Save Edit</string>
    <string name="insert_movie_button">Insert Movie</string>
    <string name="movies">MOVIES</string>
    <string name="anabella">Anabella</string>
    <string name="purchase_tickets">Purchase Tickets</string>
    <string name="now_showing">Now Showing</string>
    <string name="coming_soon">Coming soon</string>
    <string name="profile">profile</string>
    <string name="jstaff_name">Staff Name</string>
    <string name="jphone_no">Phone No</string>
    <string name="jadd">Add</string>
    <string name="jadd_staff_members">Add Staff Members</string>
    <string name="jclear">Clear</string>
    <string name="sep_27_wed">SEP 27 WED</string>
    <string name="empty">Empty</string>
    <string name="sep_28_thu">SEP 28 THU</string>
    <string name="sep_29_fri">SEP 29 FRI</string>
    <string name="sep_30_sat">SEP 30 SAT</string>
    <string name="oct_01_sun">OCT 01 SUN</string>
    <string name="confirm">Confirm</string>

</resources>



