<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profileContentFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A5C4C8"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/profile_picture_round" />

        <TextView
            android:id="@+id/textView_userName_fix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView_userName_var"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tharikrizan"
            android:textColor="#4CAF50"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/teextView_email_fix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView_email_var"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tharikrizan_yahoo_com"
            android:textColor="#4CAF50"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView_contact_fix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView_contact_var"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0767936896"
            android:textColor="#4CAF50"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView_password_fix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView_password_var"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_1_1212fddt"
            android:textColor="#4CAF50"
            android:textSize="36sp" />
    </LinearLayout>
    </ScrollView>
</FrameLayout>